fixed google font link, additional css added

--- a/src/main.html
+++ b/src/main.html
@@ -6,6 +6,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="Stylesheet" href="/src/main.css">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <!-- font for the titles -->
+<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap" rel="stylesheet">
+
   
   <title>Frontend Mentor | 3-column preview card component</title>
 
@@ -17,21 +22,21 @@
 </head>
 <body>
     <div class="container">
-        <div class="card">
+        <div class="card bg-1">
             <img class="icon" src="/images/icon-sedans.svg">
             <div class="title">Sedans</div>
             <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
                 or on your next road trip.</p>
             <button>Learn More</button>
         </div>
-        <div class="card">
+        <div class="card bg-2">
             <img class="icon" src="/images/icon-suvs.svg">
             <div class="title">SUVs</div>
             <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
                 and off-road adventures.</p>
             <button>Learn More</button>
         </div>
-        <div class="card">
+        <div class="card bg-3">
             <img class="icon" src="/images/icon-luxury.svg">
             <div class="title">Luxury</div>
             <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
