--- a/src/main.html
+++ b/src/main.html
@@ -45,18 +45,9 @@
         </div>         
     </div>
   
-   
-   
-
-   
-   
-
-   
-   
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Howell Chen</a>.
   </div>
 </body>
 </html>
